==============================================================================
 Version Change Log (school)
===============================================================================
1.0.7 --> 05/05/2017
    * View Improvements
    * Improve code in wizard

1.0.6 --> 04/05/2017
    * View level improvements.
    * Added wizard to write reason when terminating the student and other view improvements.
    * Added PlaceHolders in field of school module and other view level Improvements.

1.0.5 --> 25 April 2017 : Arpit Joshi
    * View level changes in school module

1.0.4 --> 24 April 2017 : Arpit Joshi
    * View level changes in school module.

1.0.3 --> 24 April 2017 : Vimal Patel
    * code optimized and fix error in new/update model

1.0.2 --> 19 April 2017 : Arpit Joshi
    * Added new security group is admission.
    *View level changes
    * Assigned group of admission when student in draft state.
    * Assigned groups of school student when student in done state.

1.0.1 --> 17 April 2017 : Vimal Patel
    * Improvement the school security and record rule and added hook .
